# litter

./: AGENTS.md  Makefile
.github/: dist-build-setup.yml
.github/workflows/: ios-testflight-upload.yml  ios-testflight.yml  mac-direct-dist.yml  mac-testflight.yml  mobile-ci.yml  mobile-release.yml  release.yml
apps/android/app/: build.gradle.kts
apps/android/fastlane/: Screengrabfile
apps/android/scripts/: run-remote-debug.sh
apps/ios/: project.yml
apps/ios/Litter.xcodeproj/: project.pbxproj
apps/ios/Sources/Litter/: Extensions.swift  Info-Catalyst.plist  Info.plist  Litter-Catalyst-DeveloperID.entitlements  Litter-Catalyst.entitlements  Litter.entitlements  LitterApp.swift
apps/ios/Sources/Litter/Bridge/: AppSpecificTypes.swift  GhosttyBridge.m  SwiftSshCredentialProvider.swift
apps/ios/Sources/Litter/CarPlay/: CarPlaySceneDelegate.swift  CarPlayVoiceManager.swift
apps/ios/Sources/Litter/Models/: AppLifecycleController.swift  AppModel.swift  AppSnapshotRecord+Runtime.swift  AppState.swift  AppThreadSnapshot+Runtime.swift  ChatGPTOAuth.swift  LLog.swift  LitterPalette.swift  OpenAIApiKeyStore.swift  PendingUserInputRequest+ThreadMatching.swift  PetOverlayController.swift  SavedServer.swift  ThemeManager.swift  TipJarStore.swift  VoiceRuntimeController.swift  VoiceSessionControl.swift  WallpaperManager.swift  WatchCompanionBridge.swift
apps/ios/Sources/Litter/Resources/: TipJarProducts.storekit
apps/ios/Sources/Litter/Views/: AgentRuntimePresentation.swift  AlleycatAddServerSheet.swift  AnimatedSplashView.swift  AppearanceSettingsView.swift  ChatWallpaperBackground.swift  ConversationComposerContentView.swift  ConversationComposerEntryRowView.swift  ConversationComposerModalCoordinator.swift  ConversationComposerTextView.swift  ConversationScreenModel.swift  ConversationView.swift  DirectoryPickerView.swift  DiscoveryView.swift  HeaderView.swift  HomeComposerView.swift  HomeDashboardSupport.swift  HomeDashboardView.swift  HomeModelChip.swift  HomeSessionsScrollView.swift  PetSpriteView.swift  RealtimeVoiceScreen.swift  RollingMetricText.swift  SSHAgentPickerSheet.swift  SessionsScreen.swift  SettingsView.swift
apps/ios/Sources/LitterLiveActivity/: LitterLiveActivity.entitlements
apps/ios/Sources/LitterWatch/: Info.plist  LitterWatch.entitlements
apps/ios/Sources/LitterWatchComplications/: LitterComplicationEntry.swift  LitterRunningTurnPayload.swift  LitterServerListPayload.swift
apps/ios/Tests/LitterTests/: AppSnapshotRuntimeTests.swift  HomeDashboardSupportTests.swift  LitterAppearanceModeTests.swift  WatchCompanionBridgeTests.swift  WatchProjectionTests.swift  WatchThemePayloadTests.swift
apps/ios/scripts/: app-store-release.sh  build-rust.sh  direct-dist-mac.sh  run-device.sh  run-sim.sh  testflight-setup.sh  testflight-upload-mac.sh  testflight-upload.sh
docs/: FORK-OPS.md
docs/releases/: android-play-internal-checklist.md  mac-distribution-checklist.md  testflight-whats-new.md
docs/releases/export-compliance/: README.md
patches/codex/: realtime-webrtc-env-apikey.patch
services/kittylitter/: Cargo.toml  README.md
services/push-proxy/src/: apns.ts
services/website/public/: _redirects  index.html
shared/rust-bridge/: Cargo.toml  generate-bindings.sh
shared/rust-bridge/codex-mobile-client/: Cargo.toml
shared/rust-bridge/codex-mobile-client/src/: alleycat.rs  lib.rs  plugin_refs.rs  reconnect.rs  remote_path.rs  slingshot_url.rs  ssh_bridge.rs
shared/rust-bridge/codex-mobile-client/src/ffi/: client.rs  discovery.rs  mod.rs  reconnect.rs
shared/rust-bridge/codex-mobile-client/src/local_server/: mod.rs
shared/rust-bridge/codex-mobile-client/src/mobile_client/: event_loop.rs  mod.rs  tests.rs  thread_projection.rs
shared/rust-bridge/codex-mobile-client/src/session/: connection.rs  events.rs
shared/rust-bridge/codex-mobile-client/src/store/: reducer.rs  snapshot.rs
shared/rust-bridge/codex-mobile-client/src/terminal/: remote_alleycat.rs
shared/rust-bridge/codex-mobile-client/src/types/: enums.rs  models.rs  server_requests.rs
shared/rust-bridge/codex-slingshot/: Cargo.toml
shared/rust-bridge/codex-slingshot/src/: api.rs  device_key.rs  enrollment.rs  envelope.rs  errors.rs  lib.rs  stream.rs  types.rs
tools/scripts/: README.md  build-android-rust.sh  deploy-android-ondevice.sh  fetch-mobile-store-artifacts.py  run-android.sh  testflight-feedback.sh  triage-mobile-feedback.py  update-alleycat-main.sh
(+53 files in other folders)
