[package]
name = "codex-slingshot"
version = "0.1.0"
edition = "2024"
description = "OpenAI Slingshot relay transport for Codex app-server"
license-file = "../../../LICENSE"

[dependencies]
codex-app-server-client = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
p256 = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
